--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,5 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:defaultNavHost="true"
-    tools:context=".MainActivity" />
+    app:navGraph="@navigation/nav_graph"
+    tools:context=".MainActivity"
+    tools:viewBindingIgnore="true" />
 
