fix: add src property to fragments layout

--- a/app/src/main/res/layout/fragment_add_todo.xml
+++ b/app/src/main/res/layout/fragment_add_todo.xml
@@ -12,7 +12,7 @@
         android:id="@+id/edit_text_todo_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="null"
+        android:background="@null"
         android:hint="Enter title..."
         android:inputType="text"
         android:textSize="22sp"
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="8dp"
-        android:background="null"
+        android:background="@null"
         android:gravity="top"
         android:hint="Write your thoughts, goals and etc."
         android:inputType="text"
@@ -41,6 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
         android:contentDescription="save todo"
+        android:src="@drawable/icon_save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
 
