--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/dashboardFragment"
-        android:name="com.crownedjester.soft.todosmanager.presentation.DashboardFragment"
+        android:name="com.crownedjester.soft.todosmanager.presentation.fragment.dashboard.DashboardFragment"
         android:label="DashboardFragment">
         <action
             android:id="@+id/action_dashboardFragment_to_addTodoFragment"
@@ -15,7 +15,7 @@
 
     <fragment
         android:id="@+id/addTodoFragment"
-        android:name="com.crownedjester.soft.todosmanager.presentation.AddTodoFragment"
+        android:name="com.crownedjester.soft.todosmanager.presentation.fragment.add_todo.AddTodoFragment"
         android:label="AddTodoFragment">
         <action
             android:id="@+id/action_addTodoFragment_to_dashboardFragment"
