--- a/app/src/main/res/layout/fragment_add_edit_todo.xml
+++ b/app/src/main/res/layout/fragment_add_edit_todo.xml
@@ -23,7 +23,7 @@
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/edit_text_todo_goal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:background="@null"
         android:gravity="top"
