--- a/app/src/main/res/layout/fragment_add_edit_todo.xml
+++ b/app/src/main/res/layout/fragment_add_edit_todo.xml
@@ -12,7 +12,6 @@
         android:id="@+id/edit_text_todo_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@null"
         android:hint="Enter title..."
         android:inputType="text"
         android:textSize="22sp"
@@ -24,6 +23,7 @@
         android:id="@+id/edit_text_todo_goal"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:background="@null"
         android:gravity="top"
