--- a/app/src/main/res/layout/item_todo.xml
+++ b/app/src/main/res/layout/item_todo.xml
@@ -7,8 +7,7 @@
     android:layout_margin="8dp"
     android:padding="8dp"
     app:cardCornerRadius="16dp"
-    app:cardElevation="2dp"
-    app:strokeWidth="1dp">
+    app:cardElevation="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,8 +18,8 @@
             android:id="@+id/text_view_todo_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
             android:layout_marginBottom="4dp"
             android:text="Title"
             android:textSize="22sp"
@@ -30,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginHorizontal="6dp"
-            android:background="@color/black" />
+            android:background="@color/black"/>
 
         <TextView
             android:id="@+id/text_view_todo_goal"
